add proptest for rbtree

--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -8,3 +8,6 @@ publish = false
 [dependencies]
 r53 = { git = "https://github.com/zdnscloud/r53"}
 failure_ext = { git = "https://github.com/zdnscloud/cement-rs"}
+
+[dev-dependencies]
+proptest = "0.9.4"
