--- a/datasrc/Cargo.toml
+++ b/datasrc/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 
 [dependencies]
 r53 = { git = "https://github.com/zdnscloud/r53"}
-failure_ext = { git = "https://github.com/zdnscloud/cement-rs"}
+failure = { git = "https://github.com/zdnscloud/cement-rs", package = "failure_ext"}
 
 [dev-dependencies]
 proptest = "0.9.4"
