--- a/datasrc/Cargo.toml
+++ b/datasrc/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2018"
 publish = false
 
 [dependencies]
-r53 = { git = "https://github.com/zdnscloud/r53"}
+#r53 = { git = "https://github.com/zdnscloud/r53"}
+r53 = { path = "../../r53"}
 failure = { git = "https://github.com/zdnscloud/cement-rs", package = "failure_ext"}
 rbtree = { git = "https://github.com/zdnscloud/cement-rs", package = "rbtree"}
 
