--- a/auth/Cargo.toml
+++ b/auth/Cargo.toml
@@ -12,8 +12,7 @@ futures = "0.1.24"
 protobuf = "2.7"
 grpcio = "0.4.3"
 
-#r53 = { git = "https://github.com/zdnscloud/r53"}
-r53 = { path = "../../r53"}
+r53 = { git = "https://github.com/zdnscloud/r53"}
 failure = { git = "https://github.com/zdnscloud/cement-rs", package = "failure_ext"}
 grpc_helpers = { git = "https://github.com/zdnscloud/cement-rs", package = "grpc_helpers"}
 clap = { version = "2.32", default-features = false}
