--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,7 +1,5 @@
-[workspace]
-
 [package]
-name = "vanguard2"
+name = "server"
 version = "0.1.0"
 authors = ["thesinglecloud <hanfeng@zdns.cn>"]
 edition = "2018"
@@ -9,11 +7,6 @@ publish = false
 
 [dependencies]
 tokio = "0.1.8"
-futures = "0.1.24"
-clap = { version = "2.32", default-features = false}
+futures = "0.1"
 r53 = { git = "https://github.com/zdnscloud/r53"}
 failure = { git = "https://github.com/zdnscloud/cement-rs", package = "failure_ext"}
-datasrc = { path = "datasrc" }
-server = { path = "server" }
-forwarder = { path = "forwarder" }
-auth = { path = "auth" }
