--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ futures = "0.1.24"
 clap = { version = "2.32", default-features = false}
 r53 = { git = "https://github.com/zdnscloud/r53"}
 failure = { git = "https://github.com/zdnscloud/cement-rs", package = "failure_ext"}
+metrics = { git = "https://github.com/zdnscloud/cement-rs", package = "metrics"}
 datasrc = { path = "datasrc" }
 server = { path = "server" }
 cache = { path = "cache" }
