--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,10 @@ publish = false
 
 [dependencies]
 tokio = "0.1.8"
-futures = "0.1"
+tokio-timer = "0.2.11"
+futures = "0.1.28"
+hyper = "0.12.33"
+lazy_static = "1.3.0"
+prometheus = "0.4.2"
 r53 = { git = "https://github.com/zdnscloud/r53"}
 failure = { git = "https://github.com/zdnscloud/cement-rs", package = "failure_ext"}
