--- a/resolver/Cargo.toml
+++ b/resolver/Cargo.toml
@@ -13,3 +13,4 @@ futures = "0.1.28"
 r53 = { git = "https://github.com/zdnscloud/r53"}
 failure = { git = "https://github.com/zdnscloud/cement-rs", package = "failure_ext"}
 lru = "0.1.15"
+server = { path = "../server" }
