restructure the code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,3 @@
-[workspace]
-
 [package]
 name = "vanguard2"
 version = "0.1.0"
@@ -15,6 +13,24 @@ r53 = { git = "https://github.com/zdnscloud/r53"}
 failure = { git = "https://github.com/zdnscloud/cement-rs", package = "failure_ext"}
 metrics = { git = "https://github.com/zdnscloud/cement-rs", package = "metrics"}
 datasrc = { path = "datasrc" }
-server = { path = "server" }
-auth = { path = "auth" }
-resolver = { path = "resolver" }
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
+lru = "0.1.15"
+tokio-io = "0.1"
+tokio-timer = "0.2.11"
+hyper = "0.12.33"
+lazy_static = "1.3.0"
+prometheus = "0.4.2"
+protobuf = "2.7"
+grpcio = "0.4.3"
+grpc_helpers = { git = "https://github.com/zdnscloud/cement-rs", package = "grpc_helpers"}
+
+[[bin]]
+name = "vanguard2"
+path = "src/main.rs"
+
+[build-dependencies]
+build_helpers = { git = "https://github.com/zdnscloud/cement-rs", package = "build_helpers"}
+
+[dev-dependencies]
+proptest = "0.9.4"
